--- a/src/blocks/player/__button/_play/player__button_play.css
+++ b/src/blocks/player/__button/_play/player__button_play.css
@@ -7,11 +7,6 @@
   transform: scale(1.2);
 }
 
-.player__button_play:focus {
-  outline: none;
-  transform: scale(1.2);
-}
-
 .player__button_play:active {
   transform: scale(1);
 }
