--- a/src/blocks/player/__song-text/player__song-text.css
+++ b/src/blocks/player/__song-text/player__song-text.css
@@ -18,7 +18,7 @@
   }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 500px) {
   .player__song-text {
     font-size: 14px;
     line-height: 19px;
