--- a/src/blocks/player/__song-title/player__song-title.css
+++ b/src/blocks/player/__song-title/player__song-title.css
@@ -20,7 +20,7 @@
   }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 500px) {
   .player__song-title {
     font-size: 14px;
     line-height: 19px;
