--- a/src/blocks/root/root.css
+++ b/src/blocks/root/root.css
@@ -19,6 +19,20 @@
   background-attachment: fixed;
 }
 
+/* Custom scrollbar */
+::-webkit-scrollbar {
+  width: 3px;
+}
+::-webkit-scrollbar-track {
+  background: rgba(243, 243, 243, 0.1)
+}
+::-webkit-scrollbar-thumb {
+  background: rgba(150, 150, 150, 0.6);
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #fff;
+}
+
 @media (max-width: 425px) {
   .root {
     background-position: right;
